--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ streamlit==1.38.0
 langchain==0.2.0
 langchain-huggingface==0.0.3
 langchain-openai==0.1.7
-faiss-cpu==1.7.4
+faiss-cpu
 sentence-transformers==2.7.0
 requests==2.31.0
