--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,12 @@ streamlit==1.38.0
 langchain==0.2.0
 langchain-huggingface==0.0.3
 langchain-openai==0.1.7
-faiss-cpu
+faiss-cpu==1.7.4
 sentence-transformers==2.7.0
 requests==2.31.0
-langchain-community
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
+transformers==4.41.2
+tqdm==4.66.4
+numpy==1.26.4
