--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,245 @@ langchain-openai==0.1.7
 faiss-cpu==1.7.4
 sentence-transformers==2.7.0
 requests==2.31.0
-torch==2.2.2
+torch
+accelerate==1.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+albucore==0.0.24
+albumentations==2.0.6
+annotated-types==0.7.0
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.3
+bleach==6.2.0
+branca==0.8.1
+cachetools==5.5.2
+certifi==2025.1.31
+cffi==1.17.1
+chardet==3.0.4
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.3.1
+cryptography==43.0.3
+cycler==0.12.1
+dataclasses-json==0.6.7
+datasets==3.5.0
+debugpy==1.8.13
+decorator==4.4.2
+deep-translator==1.11.4
+defusedxml==0.7.1
+dill==0.3.8
+distro==1.9.0
+executing==2.2.0
+faiss-cpu==1.10.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+folium==0.19.5
+fonttools==4.56.0
+fqdn==1.5.1
+frozenlist==1.5.0
+fsspec==2024.12.0
+gdown==5.2.0
+geopandas==1.0.1
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.2
+google-api-python-client==2.166.0
+google-auth==2.38.0
+google-auth-httplib2==0.2.0
+google-cloud-language==2.17.1
+googleapis-common-protos==1.69.2
+googletrans==4.0.0rc1
+greenlet==3.2.0
+grpcio==1.72.0rc1
+grpcio-status==1.72.0rc1
+gTTS==2.5.4
+h11==0.14.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2025.1.1
+httpcore==1.0.8
+httplib2==0.22.0
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.1
+hyperframe==5.2.0
+idna==2.10
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+ipykernel==6.29.5
+ipympl==0.9.7
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.6
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+json5==0.10.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.14
+kagglehub==0.3.10
+kiwisolver==1.4.8
+langchain==0.3.23
+langchain-community==0.3.21
+langchain-core==0.3.52
+langchain-text-splitters==0.3.8
+langsmith==0.3.31
+lazy_loader==0.4
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.1
+matplotlib-inline==0.1.7
+mistune==3.1.3
+moviepy==1.0.3
+mpmath==1.3.0
+multidict==6.3.2
+multiprocess==0.70.16
+mypy-extensions==1.0.0
+narwhals==1.33.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+nibabel==5.3.2
+nltk==3.2.4
+notebook==7.3.3
+notebook_shim==0.2.4
+numpy==2.2.4
+oauth2client==4.1.3
+openai==1.75.0
+opencv-python==4.11.0.86
+opencv-python-headless==4.11.0.86
+openrouter==1.0
+orjson==3.10.16
+overrides==7.7.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+patsy==1.0.1
+pillow==11.1.0
+platformdirs==4.3.7
+plotly==6.0.1
+preprocessing==0.1.13
+proglog==0.1.11
+prometheus_client==0.21.1
+prompt_toolkit==3.0.50
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==6.30.2
+psutil==7.0.0
+pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pydantic==2.11.3
+pydantic-settings==2.8.1
+pydantic_core==2.33.1
+PyDrive==1.3.1
+PyDrive2==1.21.3
+Pygments==2.19.1
+PyMuPDF==1.25.5
+pyogrio==0.10.0
+pyOpenSSL==24.2.1
+pyparsing==3.2.3
+pyproj==3.7.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-json-logger==3.3.0
+pytz==2025.2
+pywin32==310
+pywinpty==2.0.15
+PyYAML==6.0.2
+pyzmq==26.3.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rfc3986-validator==0.1.1
+rpds-py==0.24.0
+rsa==4.9
+safetensors==0.5.3
+scikit-image==0.25.2
+scikit-learn==1.6.1
+scipy==1.15.2
+seaborn==0.13.2
+Send2Trash==1.8.3
+sentence-transformers==4.1.0
+setuptools==78.1.0
+shapely==2.0.7
+simsimd==6.2.1
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+sphinx-rtd-theme==0.2.4
+SQLAlchemy==2.0.40
+stack-data==0.6.3
+statsmodels==0.14.4
+stringzilla==3.12.5
+sympy==1.13.1
+tenacity==9.1.2
+terminado==0.18.1
+threadpoolctl==3.6.0
+tifffile==2025.3.30
+tiktoken==0.9.0
+tinycss2==1.4.0
+tokenizers==0.21.1
+torch==2.6.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.51.3
+types-python-dateutil==2.9.0.20241206
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.3.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.45.1
+widgetsnbextension==4.0.14
+wikipedia==1.4.0
+wordcloud==1.9.4
+xxhash==3.5.0
+xyzservices==2025.1.0
+yarl==1.18.3
+zstandard==0.23.0
+
 torchvision==0.17.2
 torchaudio==2.2.2
 transformers==4.41.2
