--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.38.0
 langchain==0.2.0
 langchain-huggingface==0.0.3
 langchain-openai==0.1.7
-faiss-cpu==1.7.4
+faiss-cpu
 sentence-transformers==2.7.0
 requests==2.31.0
 torch
@@ -44,7 +44,6 @@ defusedxml==0.7.1
 dill==0.3.8
 distro==1.9.0
 executing==2.2.0
-faiss-cpu==1.10.0
 fastjsonschema==2.21.1
 filelock==3.18.0
 folium==0.19.5
