--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ requests==2.31.0
 python-dotenv==1.1.0
 
 # LangChain ecosystem
-langchain==0.2.0
+langchain
+
 langchain-openai==0.1.7
 langchain-community==0.3.21
 langchain-core==0.3.52
