--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-# Core App & UI
-streamlit
+# ───── CORE APP & UI ─────
+streamlit==1.38.0
 requests==2.31.0
-python-dotenv==1.1.0
+python-dotenv==1.0.1
 
-# LangChain ecosystem
-langchain
-
+# ───── LANGCHAIN ECOSYSTEM ─────
+langchain==0.2.0
 langchain-openai==0.1.7
 langchain-community==0.3.21
 langchain-core==0.3.52
@@ -13,75 +12,65 @@ langchain-huggingface==0.0.3
 langchain-text-splitters==0.3.8
 langsmith==0.3.31
 
-# Vector Store & Embeddings
+# ───── VECTOR STORE & EMBEDDINGS ─────
 sentence-transformers==2.7.0
-faiss-cpu==1.7.4  # pinned to avoid conflict with older LangChain versions
+faiss-cpu==1.7.4  # Works with Python 3.12 via pip install
 
-# Transformers & Torch
-transformers
-torch
+# ───── TRANSFORMERS & TORCH ─────
+transformers==4.39.3
+torch==2.2.2
 torchvision==0.17.2
 torchaudio==2.2.2
 accelerate==1.6.0
 
-# LLM Support
-openai==1.75.0
+# ───── LLM SUPPORT ─────
+openai==1.17.0
 tiktoken==0.9.0
-huggingface-hub==0.30.1
+huggingface-hub==0.20.3
 
-# NLP & Translation
+# ───── NLP & TRANSLATION ─────
 nltk==3.8.1
 deep-translator==1.11.4
 wikipedia==1.4.0
 
-# Audio & Video
+# ───── AUDIO & VIDEO ─────
 moviepy==1.0.3
 gTTS==2.5.4
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
 
-# PDF, File I/O, Images
+# ───── PDF, FILE I/O, IMAGES ─────
 PyMuPDF==1.25.5
 opencv-python==4.11.0.86
 
-# Plotting & Viz
-matplotlib==3.10.1
+# ───── PLOTTING & VISUALIZATION ─────
+matplotlib==3.8.4
 seaborn==0.13.2
 plotly==6.0.1
 wordcloud==1.9.4
 folium==0.19.5
 
-# Data Science
+# ───── DATA SCIENCE ─────
 numpy==1.26.4
-pandas==2.2.3
-scikit-learn==1.6.1
-scikit-image==0.25.2
-scipy==1.15.2
-statsmodels==0.14.4
+pandas==2.2.2
+scikit-learn==1.4.2
+scikit-image==0.22.0
+scipy==1.13.0
+statsmodels==0.14.1
 
-# Jupyter (optional)
-ipykernel==6.29.5
-jupyterlab==4.3.6
-notebook==7.3.3
-
-# Utils & Dependencies
-aiohttp==3.11.16
+# ───── UTILITIES & DEPENDENCIES ─────
+aiohttp==3.9.5
 aiohappyeyeballs==2.6.1
-accelerate==1.6.0
-filelock==3.18.0
-protobuf
-typing_extensions==4.13.0
-pydantic==2.11.3
-pydantic-settings==2.8.1
-pydantic_core==2.33.1
+filelock==3.14.0
+protobuf==4.25.3
+typing_extensions==4.11.0
+pydantic==2.6.4
+pydantic-settings==2.2.1
+pydantic_core==2.16.3
 
-# Google Cloud (Optional)
-google-api-python-client==2.166.0
-google-auth==2.38.0
-google-cloud-language==2.17.1
-
-# Other useful
-pyarrow==19.0.1
-PyYAML==6.0.2
-regex==2024.11.6
+# ───── OTHER USEFUL ─────
+pyarrow==15.0.2
+PyYAML==6.0.1
+regex==2024.4.16
 gdown==5.2.0
+
