--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ langsmith==0.3.31
 
 # ───── VECTOR STORE & EMBEDDINGS ─────
 sentence-transformers==2.7.0
-faiss-cpu==1.7.4  # Works with Python 3.12 via pip install
+faiss-cpu==1.7.4  # Compatible with Python 3.12 via pip install
 
 # ───── TRANSFORMERS & TORCH ─────
 transformers==4.39.3
@@ -58,6 +58,11 @@ scikit-image==0.22.0
 scipy==1.13.0
 statsmodels==0.14.1
 
+# ───── JUPYTER (OPTIONAL) ─────
+ipykernel==6.29.4
+jupyterlab==4.1.8
+notebook==7.1.3
+
 # ───── UTILITIES & DEPENDENCIES ─────
 aiohttp==3.9.5
 aiohappyeyeballs==2.6.1
@@ -68,9 +73,13 @@ pydantic==2.6.4
 pydantic-settings==2.2.1
 pydantic_core==2.16.3
 
+# ───── GOOGLE CLOUD (OPTIONAL) ─────
+google-api-python-client==2.114.0
+google-auth==2.28.1
+google-cloud-language==2.12.0
+
 # ───── OTHER USEFUL ─────
 pyarrow==15.0.2
 PyYAML==6.0.1
 regex==2024.4.16
 gdown==5.2.0
-
