--- a/requirements.txt
+++ b/requirements.txt
@@ -66,7 +66,7 @@ h11==0.14.0
 h2==3.2.0
 hpack==3.0.0
 hstspreload==2025.1.1
-httpcore==0.9.dev0
+httpcore==0.9.0
 httplib2==0.22.0
 httpx==0.13.3
 httpx-sse==0.4.0
