--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ colorama==0.4.6
 dataclasses-json==0.6.7
 distro==1.9.0
 exceptiongroup==1.2.2
-faiss-cpu==1.7.4
+faiss-cpu
 filelock==3.18.0
 frozenlist==1.6.0
 fsspec==2025.3.2
