--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ mypy_extensions==1.1.0
 narwhals==1.38.2
 networkx==3.4.2
 numpy==1.26.4
-openai==1.78.0
+openai==0.28  #1.78.0
 orjson==3.10.18
 packaging==24.2
 pandas==2.2.3
